[project]
name = "pddl-utils"
version = "0.1.0"
authors = [
    { name = "Claudius Kienle", email = "claudius.kienle@tu-darmstadt.de" },
]

dependencies = ["python-utils"]

[project.optional-dependencies]
test = ["pytest>=6.0", "pytest-cov"]
docker = ["docker"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
